--- a/wled00/data/edit.htm
+++ b/wled00/data/edit.htm
@@ -5,7 +5,7 @@ see https://github.com/me-no-dev/ESPAsyncWebServer -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>ESP8266 SPIFFS File Editor</title>
+<title>ESP8266 SPIFFS 文件编辑器</title>
 <meta name="author" content="Me-No-Dev" />
 <meta name="Description" content="ESP8266 SPIFFS File Web Editor"/>
 <link rel="shortcut icon" href="favicon.ico"/>
