--- a/wled00/data/msg.htm
+++ b/wled00/data/msg.htm
@@ -3,7 +3,7 @@
 
 <head>
 	<meta content='width=device-width' name='viewport'>
-	<title>WLED Message</title>
+	<title>WLED 消息</title>
 	<script>
 		function B() { window.history.back() };
 		function RS() { window.location = "../settings"; }
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-	<h2>Sample Message.</h2>
-	Sample Detail.
+	<h2>示例消息。</h2>
+	示例详细信息。
 </body>
 
 </html>
