--- a/wled00/data/settings.htm
+++ b/wled00/data/settings.htm
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
-	<title>WLED Settings</title>
+	<title>WLED 主配置</title>
 	<script>
 		var d=document;
 		var loc = false, locip, locproto = "http:";
@@ -77,15 +77,15 @@
 	</style>
 </head>
 <body onload="S()">
-<button type=submit id="b" onclick="window.location=getURL('/')">Back</button>
-<button type="submit" onclick="window.location=getURL('/settings/wifi')">WiFi Setup</button>
-<button type="submit" onclick="window.location=getURL('/settings/leds')">LED Preferences</button>
-<button id="2dbtn" type="submit" onclick="window.location=getURL('/settings/2D')">2D Configuration</button>
-<button type="submit" onclick="window.location=getURL('/settings/ui')">User Interface</button>
-<button id="dmxbtn" style="display:none;" type="submit" onclick="window.location=getURL('/settings/dmx')">DMX Output</button>
-<button type="submit" onclick="window.location=getURL('/settings/sync')">Sync Interfaces</button>
-<button type="submit" onclick="window.location=getURL('/settings/time')">Time & Macros</button>
-<button type="submit" onclick="window.location=getURL('/settings/um')">Usermods</button>
-<button type="submit" onclick="window.location=getURL('/settings/sec')">Security & Updates</button>
+<button type=submit id="b" onclick="window.location=getURL('/')">返回</button>
+<button type="submit" onclick="window.location=getURL('/settings/wifi')">WiFi 配置</button>
+<button type="submit" onclick="window.location=getURL('/settings/leds')">LED 配置</button>
+<button id="2dbtn" type="submit" onclick="window.location=getURL('/settings/2D')">2D 配置</button>
+<button type="submit" onclick="window.location=getURL('/settings/ui')">用户界面</button>
+<button id="dmxbtn" style="display:none;" type="submit" onclick="window.location=getURL('/settings/dmx')">DMX 实例</button>
+<button type="submit" onclick="window.location=getURL('/settings/sync')">同步配置</button>
+<button type="submit" onclick="window.location=getURL('/settings/time')">时钟与宏配置</button>
+<button type="submit" onclick="window.location=getURL('/settings/um')">用户模组</button>
+<button type="submit" onclick="window.location=getURL('/settings/sec')">安全与更新</button>
 </body>
 </html>
