--- a/wled00/data/settings_sec.htm
+++ b/wled00/data/settings_sec.htm
@@ -3,7 +3,7 @@
 <head>
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 	<meta charset="utf-8">
-	<title>Misc Settings</title>
+	<title>其他配置</title>
 	<script>
 		var d = document;
 		var loc = false, locip, locproto = "http:";
@@ -101,44 +101,44 @@
 	<form id="form_s" name="Sf" method="post">
 		<div class="toprow">
 		<div class="helpB"><button type="button" onclick="H()">?</button></div>
-		<button type="button" onclick="B()">Back</button><button type="submit">Save</button><hr>
+		<button type="button" onclick="B()">返回</button><button type="submit">保存</button><hr>
 		</div>
-		<h2>Security & Update setup</h2>
-		Settings PIN: <input type="password" id="PIN" name="PIN" size="4" maxlength="4" minlength="4" onkeydown="checkNum(this)" pattern="[0-9]*" inputmode="numeric" title="Please enter a 4 digit number"><br>
-		<div class="warn">&#9888; Unencrypted transmission. Be prudent when selecting PIN, do NOT use your banking, door, SIM, etc. pin!</div><br>
-		Lock wireless (OTA) software update: <input type="checkbox" name="NO"><br>
-		Passphrase: <input type="password" name="OP" maxlength="32"><br>
-		To enable OTA, for security reasons you need to also enter the correct password!<br>
-		The password should be changed when OTA is enabled.<br>
-		<b>Disable OTA when not in use, otherwise an attacker can reflash device software!</b><br>
-		<i>Settings on this page are only changable if OTA lock is disabled!</i><br>
-		Deny access to WiFi settings if locked: <input type="checkbox" name="OW"><br><br>
-		Factory reset: <input type="checkbox" name="RS"><br>
-		All settings and presets will be erased.<br><br>
-		<div class="warn">&#9888; Unencrypted transmission. An attacker on the same network can intercept form data!</div>
+		<h2>安全和更新配置</h2>
+		配置 PIN: <input type="password" id="PIN" name="PIN" size="4" maxlength="4" minlength="4" onkeydown="checkNum(this)" pattern="[0-9]*" inputmode="numeric" title="请输入一个 4 位数字"><br>
+		<div class="warn">&#9888; 未加密的传输协议。配置 PIN 码时要谨慎，不要使用您的银行、门禁、SIM卡等密码！</div><br>
+		锁定无线(OTA)软件更新: <input type="checkbox" name="NO"><br>
+		密码: <input type="password" name="OP" maxlength="32"><br>
+		使用 OTA，您还需要输入正确的密码！<br>
+		使用 OTA 时，应更改默认密码。<br>
+		<b>不使用 OTA 时应禁用，否则易受攻击者覆写！</b><br>
+		<i>此页面上的配置仅在禁用 OTA 锁定时才能更改！</i><br>
+		如果锁定，则拒绝访问 WiFi 配置: <input type="checkbox" name="OW"><br><br>
+		恢复出厂配置: <input type="checkbox" name="RS"><br>
+		所有配置和预设都将被删除。<br><br>
+		<div class="warn">&#9888; 未加密的传输协议。同一网络上的攻击者可以拦截表单数据！</div>
 		<hr>
-		<h3>Software Update</h3>
-		<button type="button" onclick="U()">Manual OTA Update</button><br>
-		Enable ArduinoOTA: <input type="checkbox" name="AO">
+		<h3>软件更新</h3>
+		<button type="button" onclick="U()">手动 OTA 更新</button><br>
+		启用 ArduinoOTA: <input type="checkbox" name="AO">
 		<hr>
-		<h3>Backup & Restore</h3>
-		<a class="btn lnk" id="bckcfg" href="/presets.json" download="presets">Backup presets</a><br>
-		<div>Restore presets<br><input type="file" name="data" accept=".json"> <button type="button" onclick="uploadFile(d.Sf.data,'/presets.json');">Upload</button><br></div><br>
-		<a class="btn lnk" id="bckpresets" href="/cfg.json" download="cfg">Backup configuration</a><br>
-		<div>Restore configuration<br><input type="file" name="data2" accept=".json"> <button type="button" onclick="uploadFile(d.Sf.data2,'/cfg.json');">Upload</button><br></div>
-		<div class="warn">&#9888; Restoring presets/configuration will OVERWRITE your current presets/configuration.<br>
-		Incorrect configuration may require a factory reset or re-flashing of your ESP.</div>
-		For security reasons, passwords are not backed up.
+		<h3>备份和还原</h3>
+		<a class="btn lnk" id="bckcfg" href="/presets.json" download="presets">备份预设</a><br>
+		<div>恢复预设<br><input type="file" name="data" accept=".json"> <button type="button" onclick="uploadFile(d.Sf.data,'/presets.json');">上传</button><br></div><br>
+		<a class="btn lnk" id="bckpresets" href="/cfg.json" download="cfg">备份配置</a><br>
+		<div>恢复配置<br><input type="file" name="data2" accept=".json"> <button type="button" onclick="uploadFile(d.Sf.data2,'/cfg.json');">上传</button><br></div>
+		<div class="warn">&#9888; 恢复预设/配置将覆盖您当前的预设/配置。<br>
+			不正确的配置可能需要恢复出厂配置或重新烧录硬件 ESP。</div>
+			出于安全原因，不会备份密码。
 		<hr>
-		<h3>About</h3>
-		<a href="https://github.com/Aircoookie/WLED/" target="_blank">WLED</a> version ##VERSION##<!-- Autoreplaced from package.json --><br><br>
-		<a href="https://github.com/Aircoookie/WLED/wiki/Contributors-and-credits" target="_blank">Contributors, dependencies and special thanks</a><br>
-		A huge thank you to everyone who helped me create WLED!<br><br>
+		<h3>关于 WLED</h3>
+		<a href="https://github.com/Aircoookie/WLED/" target="_blank">WLED</a> 版本 ##VERSION##<!-- Autoreplaced from package.json --><br><br>
+		<a href="https://github.com/Aircoookie/WLED/wiki/Contributors-and-credits" target="_blank">贡献者、依赖项和特别感谢</a><br>
+		非常感谢所有帮助我创建WLED的人！<br><br>
 		(c) 2016-2023 Christian Schwinne <br>
-		<i>Licensed under the <a href="https://github.com/Aircoookie/WLED/blob/master/LICENSE" target="_blank">MIT license</a></i><br><br>
-		Server message: <span class="sip"> Response error! </span><hr>
+		<i>开源许可 <a href="https://github.com/Aircoookie/WLED/blob/master/LICENSE" target="_blank">MIT license</a></i><br><br>
+		服务器消息: <span class="sip"> 回应错误! </span><hr>
 		<div id="toast"></div>
-		<button type="button" onclick="B()">Back</button><button type="submit">Save</button>
+		<button type="button" onclick="B()">返回</button><button type="submit">保存</button>
 	</form>
 </body>
 </html>
