--- a/wled00/data/usermod.htm
+++ b/wled00/data/usermod.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
+<meta charset="UTF-8">
 
-<body>No usermod custom web page set.</body>
+<body>没有设置 usermod 自定义网页。</body>
 
 </html>
