--- a/wled00/data/cpal/cpal.htm
+++ b/wled00/data/cpal/cpal.htm
@@ -5,7 +5,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>WLED Custom Palette Editor</title>
+    <title>WLED 自定义调色板编辑器</title>
     <script type="text/javascript">
       var d = document;
       function gId(e) {return d.getElementById(e);}
@@ -158,7 +158,7 @@
         <rect style="fill:#003FFF" x="18" y="10" width="4" height="8"/>
         <rect style="fill:#003FFF" x="22" y="6" width="8" height="4"/>
       </svg>
-      <span id="head">WLED Custom Palette Editor</span>
+      <span id="head">WLED 自定义调色板编辑器</span>
     </h1>
   </div>
 
@@ -168,23 +168,23 @@
   <div style="display: flex; justify-content: center;">
     <div id="palettes" class="palettesMain">
         <div id="palTop" class="palTop">
-          Currently in use custom palettes
+          当前使用的自定义调色板
         </div>
     </div>
   </div>
 
   <div style="display: flex; justify-content: center;">
     <div id="info">
-      Click on the gradient editor to add new color slider, then the colored box below the slider to change its color. 
-      Click the red box below indicator (and confirm) to delete. 
-      Once finished, click the arrow icon to upload into the desired slot. 
-      To edit existing palette, click the pencil icon.
+      点击渐变编辑器添加新的颜色滑块，然后点击滑块下方的彩色方框更改其颜色。
+      点击指示器下方的红框(并确认)删除。
+      完成后，点击箭头图标上传到所需的插槽中。
+      要编辑现有调色板，请单击铅笔图标。
     </div>
   </div>
   <div style="display: flex; justify-content: center;">
     <div id="staticPalettes" class="palettesMain">
         <div id="statpalTop" class="palTop">
-          Available static palettes
+          可用的静态调色板
         </div>
     </div>
   </div>  
