--- a/wled00/data/pixart/pixart.htm
+++ b/wled00/data/pixart/pixart.htm
@@ -4,7 +4,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>WLED Pixel Art Converter</title>
+    <title>WLED 像素艺术转换器</title>
     <link rel="stylesheet" href="pixart.css">
     <link rel="shortcut icon" href="favicon-16x16.png">
     <script type="text/javascript">
@@ -24,27 +24,27 @@
               <rect style="fill:#003FFF" x="18" y="10" width="4" height="8"/>
               <rect style="fill:#003FFF" x="22" y="6" width="8" height="4"/>
             </svg>
-            WLED Pixel Art Converter
+            WLED 像素艺术转换器
           </h1>
         </div>
-        <h2>Convert image to WLED JSON (pixel art on WLED matrix)</h2>
+        <h2>将图像转换为 WLED JSON(WLED 2D面板像素艺术)</h2>
         <p>
           <table id="fieldTable"  style="width: 100%; table-layout: fixed; align-content: center;">
             <tr>
               <td style="vertical-align: middle;">
-                <label for="ledSetupSelector">Led setup:</label>
+                <label for="ledSetupSelector">Led 配置:</label>
               </td>
               <td class="adaptiveTD">
                 <select id="ledSetupSelector" class="mainSelector">
-                  <option value="matrix" selected>2D Matrix</option>
-                  <option value="r2l">Serpentine, first row right to left &lt;-</option>
-                  <option value="l2r">Serpentine, first row left to right -&gt;</option>
+                  <option value="matrix" selected>2D 面板</option>
+                  <option value="r2l">蛇形，第一排从右到左 &lt;-</option>
+                  <option value="l2r">蛇形，第一排从左至右 -&gt;</option>
                 </select>
               </td>
             </tr>        
             <tr>
               <td style="vertical-align: middle;">
-                <label for="formatSelector">Output format:</label>
+                <label for="formatSelector">输出格式:</label>
               </td>
               <td class="adaptiveTD">
                 <select id="formatSelector" class="mainSelector">
@@ -56,7 +56,7 @@
             </tr>        
             <tr>
               <td style="vertical-align: middle;">
-                <label for="colorFormatSelector">Color code format:</label>
+                <label for="colorFormatSelector">色彩格式:</label>
               </td>
               <td class="adaptiveTD">
                 <select id="colorFormatSelector" class="mainSelector">
@@ -67,7 +67,7 @@
             </tr>
             <tr>
               <td style="vertical-align: middle;">
-                <label for="addressingSelector">Addressing:</label>
+                <label for="addressingSelector">地址分配:</label>
               </td>
               <td class="adaptiveTD">
                 <select id="addressingSelector" class="mainSelector">
@@ -79,7 +79,7 @@
             </tr>
             <tr>
               <td style="vertical-align: middle;">
-                <label for="brightnessNumber">Brightness:</label>
+                <label for="brightnessNumber">明亮度:</label>
               </td>
               <td style="vertical-align: middle; display: flex; align-items: center;">
                 <input type="range" id="brightnessNumber" min="1" max="255" value="128">
@@ -88,7 +88,7 @@
             </tr>
             <tr>
               <td style="vertical-align: middle;">
-                <label for="colorLimitNumber">Max no of colors/JSON:</label>
+                <label for="colorLimitNumber">色彩/JSON 的最大数:</label>
               </td>
               <td style="vertical-align: middle; display: flex; align-items: center;">
                 <input type="range" id="colorLimitNumber" min="1" max="512" value="256">
@@ -97,7 +97,7 @@
             </tr>
             <tr class="ha-hide">
               <td style="vertical-align: middle;">
-                <label for="haID">HA Device ID:</label>
+                <label for="haID">HA 设备 ID:</label>
               </td>
               <td class="adaptiveTD">
                 <input class="fullTextField" type="text" id="haID" value="pixel_art_controller_001">
@@ -105,7 +105,7 @@
             </tr>
             <tr class="ha-hide">
               <td style="vertical-align: middle;">
-                <label for="haUID">HA Device Unique ID:</label>
+                <label for="haUID">HA 设备唯一 ID:</label>
               </td>
               <td class="adaptiveTD">
                 <input class="fullTextField" type="text" id="haUID" value="pixel_art_controller_001a">
@@ -113,7 +113,7 @@
             </tr>
             <tr class="ha-hide">
               <td style="vertical-align: middle;">
-                <label for="haName">HA Device Name:</label>
+                <label for="haName">HA 设备名称:</label>
               </td>
               <td class="adaptiveTD">
                 <input class="fullTextField" type="text" id="haName" value="Pixel Art Kitchen">
@@ -121,7 +121,7 @@
             </tr>
             <tr>
               <td style="vertical-align: middle;">
-                <label for="curlUrl">Device IP/host name:</label>
+                <label for="curlUrl">设备 IP/host 名称:</label>
               </td>
               <td class="adaptiveTD">
                 <input class="fullTextField" type="text" id="curlUrl" value="">
@@ -129,7 +129,7 @@
             </tr>
             <tr>
               <td style="vertical-align: middle;">
-                <label for="targetSegment">Target segment id:</label>
+                <label for="targetSegment">目标区段 ID:</label>
               </td>
               <td class="adaptiveTD">
                 <input class="flxTFld" type="number" id="segID" value="0" min="0" max="63">
@@ -146,7 +146,7 @@
                   <svg id="scaleToggle" style="width:36px;height:36px; cursor: pointer;" viewBox="0 0 24 24" onclick="switchScale()">
                     <path id="scaleTogglePath" fill="currentColor" d="M17,7H7A5,5 0 0,0 2,12A5,5 0 0,0 7,17H17A5,5 0 0,0 22,12A5,5 0 0,0 17,7M7,15A3,3 0 0,1 4,12A3,3 0 0,1 7,9A3,3 0 0,1 10,12A3,3 0 0,1 7,15Z" />
                   </svg>
-                   &nbsp;Scale image
+                   &nbsp;缩放图像
                 </div>
               </td>
               <td style="vertical-align: middle;">
@@ -163,8 +163,8 @@
         <p>
           <label for="file-picker">
             <div id="drop-zone">    
-                Drop image here <br>or <br>
-                Click to select a file
+              在此拖放图片 <br>或者 <br>
+              点击选择文件
             </div>
           </label>
         </p>
@@ -196,7 +196,7 @@
           <button id="sendJSONledbutton" class="buttonclass"></button>
         </div>
         <div>
-          <h3><div id="version">Version 1.0.8</div>&nbsp;-&nbsp; <a href="https://github.com/werkstrom/WLED-PixelArtConverter/blob/main/README.md" target="_blank">Help/About</a></h3>
+          <h3><div id="version">版本 1.0.8</div>&nbsp;-&nbsp; <a href="https://github.com/werkstrom/WLED-PixelArtConverter/blob/main/README.md" target="_blank">帮助/关于</a></h3>
         </div>
       </div>
       <div id=bottom-part style="display: none" class=bottom-part></div>
