--- a/wled00/data/settings_time.htm
+++ b/wled00/data/settings_time.htm
@@ -3,7 +3,7 @@
 <head>
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 	<meta charset="utf-8">
-	<title>Time Settings</title>
+	<title>时钟配置</title>
 	<script>
 	var d=document;
 	var loc = false, locip, locproto = "http:";
@@ -65,7 +65,7 @@
 	function Cs() { gId("cac").style.display=(gN("OL").checked)?"block":"none"; }
 	function BTa()
 	{
-		var ih="<thead><tr><th>En.</th><th>Hour</th><th>Minute</th><th>Preset</th><th></th></tr></thead>";
+		var ih="<thead><tr><th>启用</th><th>小时</th><th>分钟</th><th>预设</th><th></th></tr></thead>";
 		for (i=0;i<8;i++) {
 			ih+=`<tr><td><input name="W${i}" id="W${i}" type="hidden"><input id="W${i}0" type="checkbox"></td>
 <td><input name="H${i}" class="xs" type="number" min="0" max="24"></td>
@@ -83,7 +83,7 @@
 		<hr></div></td></tr>`;
 		}
 		ih+=`<tr><td><input name="W8" id="W8" type="hidden"><input id="W80" type="checkbox"></td>
-<td>Sunrise<input name="H8" value="255" type="hidden"></td>
+<td>日出<input name="H8" value="255" type="hidden"></td>
 <td><input name="N8" class="xs" type="number" min="-59" max="59"></td>
 <td><input name="T8" class="s" type="number" min="0" max="250"></td>
 <td><div id="CB8" onclick="expand(this,8)" class="cal">&#128197;</div></td></tr><tr><td colspan=5>`;
@@ -91,7 +91,7 @@
 		for (j=1;j<8;j++) ih+=`<td><input id="W8${j}" type="checkbox"></td>`;
 		ih+="</tr></table><hr></div></td></tr>";
 		ih+=`<tr><td><input name="W9" id="W9" type="hidden"><input id="W90" type="checkbox"></td>
-<td>Sunset<input name="H9" value="255" type="hidden"></td>
+<td>日落<input name="H9" value="255" type="hidden"></td>
 <td><input name="N9" class="xs" type="number" min="-59" max="59"></td>
 <td><input name="T9" class="s" type="number" min="0" max="250"></td>
 <td><div id="CB9" onclick="expand(this,9)" class="cal">&#128197;</div></td></tr><tr><td colspan=5>`;
@@ -164,13 +164,13 @@
 	<form id="form_s" name="Sf" method="post" onsubmit="Wd()">
 		<div class="toprow">
 		<div class="helpB"><button type="button" onclick="H()">?</button></div>
-		<button type="button" onclick="B()">Back</button><button type="submit">Save</button><hr>
+		<button type="button" onclick="B()">返回</button><button type="submit">保存</button><hr>
 		</div>
-		<h2>Time setup</h2>
-		Get time from NTP server: <input type="checkbox" name="NT"><br>
+		<h2>时间设置</h2>
+		从 NTP 服务器获取时间: <input type="checkbox" name="NT"><br>
 		<input type="text" name="NS" maxlength="32"><br>
-		Use 24h format: <input type="checkbox" name="CF"><br>
-		Time zone: 
+		使用 24 小时格式:  <input type="checkbox" name="CF"><br>
+		时区:  
 		<select name="TZ">
 			<option value="0" selected>GMT(UTC)</option>
 			<option value="1">GMT/BST</option>
@@ -196,53 +196,53 @@
 			<option value="21">MX-CST</option>
 			<option value="22">PKT (Pakistan)</option>
 		</select><br>
-		UTC offset: <input name="UO" type="number" min="-65500" max="65500" required> seconds (max. 18 hours)<br>
-		Current local time is <span class="times">unknown</span>.<br>
-		Latitude: <select name="LTR"><option value="N">N</option><option value="S">S</option></select><input name="LT" type="number" class="xl" min="0" max="66.6" step="0.01"><br>
-		Longitude: <select name="LNR"><option value="E">E</option><option value="W">W</option></select><input name="LN" type="number" class="xl" min="0" max="180" step="0.01"><br>
-		<button type="button" id="locbtn" onclick="getLoc()">Get location</button>
-		<div><i>(opens new tab, only works in browser)</i></div>
+		UTC 偏移: <input name="UO" type="number" min="-65500" max="65500" required> 秒 (最大 18 小时)<br>
+		当前时间为 <span class="times">未知</span>.<br>
+		纬度: <select name="LTR"><option value="N">N</option><option value="S">S</option></select><input name="LT" type="number" class="xl" min="0" max="66.6" step="0.01"><br>
+		经度: <select name="LNR"><option value="E">E</option><option value="W">W</option></select><input name="LN" type="number" class="xl" min="0" max="180" step="0.01"><br>
+		<button type="button" id="locbtn" onclick="getLoc()">获取位置</button>
+		<div><i>(打开新标签页，仅在浏览器中有效)</i></div>
 		<div id="sun" class="times"></div>
-		<h3>Clock</h3>
-		Analog Clock overlay: <input type="checkbox" name="OL" onchange="Cs()"><br>
+		<h3>时钟配置</h3>
+		模拟时钟叠加: <input type="checkbox" name="OL" onchange="Cs()"><br>
 		<div id="cac">
-			First LED: <input name="O1" type="number" min="0" max="255" required> Last LED: <input name="O2" type="number" min="0" max="255" required><br>
-			12h LED: <input name="OM" type="number" min="0" max="255" required><br>
-			Show 5min marks: <input type="checkbox" name="O5"><br>
-			Seconds (as trail): <input type="checkbox" name="OS"><br>
+			第一 LED: <input name="O1" type="number" min="0" max="255" required> 最后 LED: <input name="O2" type="number" min="0" max="255" required><br>
+			12小时 LED: <input name="OM" type="number" min="0" max="255" required><br>
+			显示 5 分钟标记: <input type="checkbox" name="O5"><br>
+			秒数(作为轨迹): <input type="checkbox" name="OS"><br>
 		</div>
-		Countdown Mode: <input type="checkbox" name="CE"><br>
-		Countdown Goal:<br>
-		Date:&nbsp;<nowrap>20<input name="CY" class="xs" type="number" min="0" max="99" required>-<input name="CI" class="xs" type="number" min="1" max="12" required>-<input name="CD" class="xs" type="number" min="1" max="31" required></nowrap><br>
-		Time:&nbsp;<nowrap><input name="CH" class="xs" type="number" min="0" max="23" required>:<input name="CM" class="xs" type="number" min="0" max="59" required>:<input name="CS" class="xs" type="number" min="0" max="59" required></nowrap><br>
-		<h3>Macro presets</h3>
-		<b>Macros have moved!</b><br>
-		<i>Presets now also can be used as macros to save both JSON and HTTP API commands.<br>
-		Just enter the preset ID below!</i>
-		<i>Use 0 for the default action instead of a preset</i><br>
-		Alexa On/Off Preset: <input name="A0" class="m" type="number" min="0" max="250" required> <input name="A1" class="m" type="number" min="0" max="250" required><br>
-		Countdown-Over Preset: <input name="MC" class="m" type="number" min="0" max="250" required><br>
-		Timed-Light-Over Presets: <input name="MN" class="m" type="number" min="0" max="250" required><br>
-		<h3>Button actions</h3>
+		倒计时模式: <input type="checkbox" name="CE"><br>
+		倒计时目标: <br>
+		日期: &nbsp;<nowrap>20<input name="CY" class="xs" type="number" min="0" max="99" required>-<input name="CI" class="xs" type="number" min="1" max="12" required>-<input name="CD" class="xs" type="number" min="1" max="31" required></nowrap><br>
+		时间: &nbsp;<nowrap><input name="CH" class="xs" type="number" min="0" max="23" required>:<input name="CM" class="xs" type="number" min="0" max="59" required>:<input name="CS" class="xs" type="number" min="0" max="59" required></nowrap><br>
+		<h3>宏预设</h3>
+		<b>宏已移动！</b><br>
+		<i>预设现在还可用作宏，以保存 JSON 和 HTTP API 命令。<br>
+		只需在下方输入预设 ID 即可！</i>
+		<i>默认操作使用 0</i><br>
+		Alexa 开/关预设: <input name="A0" class="m" type="number" min="0" max="250" required> <input name="A1" class="m" type="number" min="0" max="250" required><br>
+		倒计时-超时预设: <input name="MC" class="m" type="number" min="0" max="250" required><br>
+		定时灯光预设: <input name="MN" class="m" type="number" min="0" max="250" required><br>
+		<h3>按钮操作</h3>
 		<table style="margin: 0 auto;" id="macros">
 			<thead>
 				<tr>
-					<td>push<br>switch</td>
-					<td>short<br>on-&gt;off</td>
-					<td>long<br>off-&gt;on</td>
+					<td>按下<br>开关</td>
+					<td>short<br>开-&gt;关</td>
+					<td>long<br>关-&gt;开</td>
 					<td>double<br>N/A</td>
 				</tr>
 			</thead>
 			<tbody>
 			</tbody>
 		</table>
-		<a href="https://kno.wled.ge/features/macros/#analog-button" target="_blank">Analog Button setup</a>
-		<h3>Time-controlled presets</h3>
+		<a href="https://kno.wled.ge/features/macros/#analog-button" target="_blank">模拟按钮设置</a>
+		<h3>时间控制预设</h3>
 		<div style="display: inline-block">
 		<table id="TMT" style="min-width:330px;"></table>
 		</div>
 		<hr>
-		<button type="button" onclick="B()">Back</button><button type="submit">Save</button>
+		<button type="button" onclick="B()">返回</button><button type="submit">保存</button>
 	</form>
 </body>
 </html>
