--- a/wled00/data/update.htm
+++ b/wled00/data/update.htm
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<meta content='width=device-width' name='viewport'>
-	<title>WLED Update</title>
+	<title>WLED 升级</title>
 	<script>
 		function B() { window.history.back(); }
 		function U() { document.getElementById("uf").style.display="none";document.getElementById("msg").style.display="block"; }
@@ -14,15 +15,15 @@
 </head>
 
 <body onload="GetV()">
-	<h2>WLED Software Update</h2>
+	<h2>WLED 软件升级</h2>
 	<form method='POST' action='./update' id='uf' enctype='multipart/form-data' onsubmit="U()">
-		Installed version: <span class="sip">##VERSION##</span><br>
-		Download the latest binary: <a href="https://github.com/Aircoookie/WLED/releases" target="_blank">
-		<img src="https://img.shields.io/github/release/Aircoookie/WLED.svg?style=flat-square"></a><br>
+		安装版本: <span class="sip">##VERSION##</span><br>
+		最新版本: <a href="https://github.com/kslpix/WLED_ZH" target="_blank">
+		<img src="https://img.shields.io/github/release/kslpix/WLED_ZH.svg?style=flat-square"></a><br>
 		<input type='file' name='update' required><br> <!--should have accept='.bin', but it prevents file upload from android app-->
-		<button type="submit">Update!</button><br>
-		<button type="button" onclick="B()">Back</button>
+		<button type="submit">升级!</button><br>
+		<button type="button" onclick="B()">返回</button>
 	</form>
-	<div id="msg"><b>Updating...</b><br>Please do not close or refresh the page :)</div>
+	<div id="msg"><b>升级中...</b><br>请不要关闭或刷新页面 :)</div>
 </body>
 </html>
